--- a/css/style.css
+++ b/css/style.css
@@ -134,10 +134,11 @@ p {
 
 /* Showcase */
 #showcase {
-  background: #333 url('../img/showcase.jpg') no-repeat center center/cover;
+  background: #333 url('../img/dashboard.jpg') no-repeat center center/cover;
   height: 100vh;
   color: #fff;
 }
+
 
 #showcase .showcase-content {
   display: flex;
