--- a/css/mobile.css
+++ b/css/mobile.css
@@ -16,6 +16,13 @@
   margin-bottom: 0;
 }
 
+@media(max-height: 402px) {
+  #showcase .showcase-content {
+    margin-top: -7rem;
+    top: 177px;
+  }
+}
+
 /* Smartphones */
 @media(max-width: 500px) {
   #navbar {
@@ -32,9 +39,9 @@
     padding: 0.5rem;
   }
 
-  #showcase .showcase-content {
+  /* #showcase .showcase-content {
     top: 110px;
-  }
+  } */
 
   #who {
     display: block;
@@ -60,13 +67,18 @@
     height: 200px;
     border-top: 4px solid #333;
   }
+
+  #showcase .showcase-content {
+    margin-top: -7rem;
+    top: 245px;
+  }
 }
 
-@media(max-height: 568px) {
-  #showcase .showcase-content {
-    margin-top: -2rem;
-    top: 140px;
-  }
+@media(max-height: 502px) {
+  /* #showcase .showcase-content {
+    margin-top: -5rem;
+    top: 145px;
+  } */
 
   .l-heading {
     font-size: 3rem;
@@ -75,4 +87,12 @@
   .lead {
     font-size: 1rem;
   }
+}
+
+
+
+
+#contact .contact-form {
+  padding: 25px 0;
+  width: 1;
 }
