--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+/* @import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700'); */
 
 * {
   box-sizing: border-box;
@@ -51,7 +52,7 @@ p {
 }
 
 .l-heading {
-  font-size: 4rem;
+  font-size: 3rem;
   margin-bottom: 0.75rem;
   line-height: 1.1;
 }
@@ -134,7 +135,7 @@ p {
 
 /* Showcase */
 #showcase {
-  background: #333 url('../img/dashboard.jpg') no-repeat center center/cover;
+  background: #333 url('../img/dashboard1.jpg') no-repeat center center/cover;
   height: 100vh;
   color: #fff;
 }
@@ -154,7 +155,7 @@ p {
   left:0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.7);
 }
 
 /* Section: What We Do */
@@ -201,12 +202,18 @@ p {
 }
 
 /* Section: Contact */
-#contact {
+/* #contact {
   display: flex;
-}
+} */
 
 #contact .map, #contact .contact-form {
-  flex: 1;
+  /* flex: 1; */
+  width: 50%;
+  margin: auto;
+}
+
+#contact .contact-form h2,#contact .contact-form p {
+  text-align: center;
 }
 
 #contact .contact-form .form-group {
@@ -221,4 +228,79 @@ p {
 #contact .contact-form textarea {
   width: 100%;
   padding: 0.5rem;
+}
+
+.item img {
+  width: 50px;
+  height: 50px;
+  margin: auto;
+  background: green;
+  border-radius: 50%;
+}
+
+
+.icons {
+  display: flex;
+}
+
+.icon{
+  flex: 1;
+}
+
+.icon img{
+  width:150px;
+  height: 150px;
+}
+
+#who .items {
+  display: flex;
+  margin: 3% 0;
+}
+
+#who .items .item{
+  flex : 1;
+  text-align: center;
+}
+
+
+
+/* out team   */
+
+.team {
+  display: flex;
+  justify-content: space-between;
+}
+
+.team-member {
+  flex:1;
+}
+
+/* .team-member img{
+  width: 250px;
+  height:300px;
+} */
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width:70%;
+  margin: auto;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+
+#who .items i:hover {
+  width : 100px;
+  height: 100px;
+  border-radius:50%;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
 }
