--- a/css/widescreen.css
+++ b/css/widescreen.css
@@ -1,15 +1,15 @@
 /* Align icon to left */
-#what .items .item {
+/* #what .items .item {
   display: flex;
   text-align: left;
-}
+} */
 
 /* Position icon */
-#what .items .item i {
+/* #what .items .item i {
   margin-right: 1.3rem;
-  align-self: center;
+  align-self: flex-start;
   margin-bottom: 0;
-}
+} */
 
 #contact .map {
   flex: 2;
