--- a/css/mobile.css
+++ b/css/mobile.css
@@ -26,6 +26,12 @@
   margin-bottom: 0;
 }
 
+#navbar ul li a {
+  color: #fff;
+  padding: 0.15rem;
+  margin: 0 0.25rem;
+}
+
 @media(max-height: 400px) {
   #showcase .showcase-content {
     margin-top: -7rem;
